--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ sup {
 
 </head>
 <body>
-<p><img src="https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png" title="Logo Title Text 1" alt="alt text" /></p>
+<p><img src="../images/tryning.png" alt="Alt text" /></p>
 
 <h1>Guia de aprendisaje</h1>
 
@@ -315,7 +315,7 @@ sup {
 <h2>Temas:</h2>
 
 <ol>
-<li><a href="https://www.google.com">Entorno Linux.</a></li>
+<li><a href="../entorno_linux.html">Entorno Linux.</a></li>
 <li><a href="https://www.google.com">Control de versiones.</a></li>
 <li><a href="https://www.google.com">Frameworks PHP.</a></li>
 <li><a href="https://www.google.com">Javascript.</a></li>
