--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ sup {
 
 </head>
 <body>
-<p><img src="../images/tryning.png" alt="Alt text" /></p>
+<p><img src="../img/tryning.png" alt="Alt text" /></p>
 
 <h1>Guia de aprendisaje</h1>
 
