Create entorno linux section

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ sup {
 
 <h1>Guia de aprendisaje</h1>
 
-<p>Este tutorial sera de mucha ayuda para tu aprendisaje en las nuevas tecnologias y herramientas de desarrollo.</p>
+<h4>Este tutorial sera de mucha ayuda para tu aprendisaje en las nuevas tecnologias y herramientas de desarrollo.</h4>
 
 <h2>Temas:</h2>
 
