--- a/entorno_linux.html
+++ b/entorno_linux.html
@@ -306,6 +306,8 @@ sup {
 
 </head>
 <body>
+<p><img src="img/linux.png" alt="Alt text" /></p>
+
 <h1>Entorno linux</h1>
 
 <h4>Linux es un sistema operativo enfocado a diferentes áreas, en esta guía lo enfocaremos al desarrollo de software. En esta sección veremos acerca de:</h4>
