--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ sup {
 
 <ol>
 <li><a href="entorno_linux.html">Entorno Linux.</a></li>
-<li><a href="https://www.google.com">Control de versiones.</a></li>
+<li><a href="control_de_versiones.html">Control de versiones.</a></li>
 <li><a href="https://www.google.com">Frameworks PHP.</a></li>
 <li><a href="https://www.google.com">Javascript.</a></li>
 </ol>
