Add frameworks section

--- a/frameworks_php.html
+++ b/frameworks_php.html
@@ -302,24 +302,28 @@ sup {
 	}
 }
 </style>
-<title>Guia de aprendisaje</title>
+<title>Frameworks PHP</title>
 
 </head>
 <body>
-<p><img src="img/tryning.png" alt="Alt text" /></p>
+<p><img src="img/php.png" alt="Alt text" /></p>
 
-<h1>Guia de aprendisaje</h1>
+<h1>Frameworks PHP</h1>
 
-<h4>Este tutorial sera de mucha ayuda para tu aprendisaje en las nuevas tecnologias y herramientas de desarrollo.</h4>
+<h4>Un Framework es un entorno o ambiente de trabajo para desarrollo; dependiendo del lenguaje normalmente integra componentes que facilitan el desarrollo de aplicaciones como el soporte de programa, bibliotecas, plantillas y más.</h4>
 
-<h2>Temas:</h2>
+<ul>
+<li><h3>Framework:</h3>
 
 <ol>
-<li><a href="entorno_linux.html">Entorno Linux.</a></li>
-<li><a href="control_de_versiones.html">Control de versiones.</a></li>
-<li><a href="frameworks_php.html">Frameworks PHP.</a></li>
-<li><a href="https://www.google.com">Javascript.</a></li>
+<li> <a href="https://www.youtube.com/watch?v=QD-NuVImBDA">Introduccion a los frameworks</a></li>
+<li> <a href="https://openwebinars.net/los-10-mejores-frameworks-php-que-solicitan-las-empresas/">Framework más populares.</a></li>
+<li> <a href="http://www.slimframework.com/docs/tutorial/first-app.html">Tutorial micro-framework <strong>Slim.</strong></a></li>
+<li> <a href="http://book.cakephp.org/2.0/en/tutorials-and-examples.html">Tutorial <strong>Cakephp</strong></a></li>
+<li> <a href="https://laravel.com/docs/5.2/quickstart">Tutorial <strong>Laravel</strong></a></li>
 </ol>
+</li>
+</ul>
 
 </body>
 </html>
